--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,6 +1,6 @@
 # This file is used to automatically request review to some people for some aspects of KOSS documentation.
 # Read more about code owners here - https://help.github.com/articles/about-code-owners/
-# Keep the limited documents and limited owners. Follow /.github/CONTRIBUTING.md#how-is-a-change-reviewed for the review process.
+# Be very conservative with this file. Keep the documents and owners limited. Follow /.github/CONTRIBUTING.md#how-is-a-change-reviewed for the review process.
 
 /docs/community/governance.md @OrkoHunter @kshitij10496 @madan96 @pranitbauva1997 @nitinkgp23 @DefCon-007 @Parth-Vader
 /docs/community/history.md @OrkoHunter @kshitij10496 @madan96 @pranitbauva1997 @nitinkgp23 @DefCon-007 @Parth-Vader
